--- a/css/fonts.css
+++ b/css/fonts.css
@@ -13,3 +13,15 @@
   font-family: lobster;
   src: url('/fonts/Lobster/Lobster-Regular.ttf') format('truetype');
 }
+
+.font-open-sans {
+  font-family: open-sans;
+}
+
+.font-indie-flower {
+  font-family: indie-flower;
+}
+
+.font-lobster {
+  font-family: lobster;
+}
