changed paths to their relative rendition

--- a/layout-1/css/style.css
+++ b/layout-1/css/style.css
@@ -1,4 +1,4 @@
-@import url('/css/fonts.css');
+@import url('../css/fonts.css');
 @import url('colors.css');
 @import url('extras/extras.css');
 @import url('layout.css');
