--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: open-sans;
-  src: url('/fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf')
+  src: url('../fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf')
     format('truetype');
 }
 
 @font-face {
   font-family: indie-flower;
-  src: url('/fonts/Indie_Flower/IndieFlower-Regular.ttf') format('truetype');
+  src: url('../fonts/Indie_Flower/IndieFlower-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: lobster;
-  src: url('/fonts/Lobster/Lobster-Regular.ttf') format('truetype');
+  src: url('../fonts/Lobster/Lobster-Regular.ttf') format('truetype');
 }
 
 .font-open-sans {
